additional editing and formatting. adding R file.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -69,6 +69,9 @@ maxInterval <- interval[which.max(interval$x),]
 maxInterval
 ```
 
+Interval **`r maxInterval$interval`** is the interval with the most steps at **`r maxInterval$x`** steps.
+
+
 ### Imputing missing values
 
 #### Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
@@ -81,7 +84,11 @@ totalNAs <- sum(is.na(actDF$steps))
 totalNAs
 ```
 
+There are **`r totalNAs`** intervals with missing values (NA).
+
 Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+For this project, the mean of each interval will be used to replace the missing values.
 ```{r}
 meanTotalInterval <- tapply(actDF$steps, actDF$interval, mean, na.rm=TRUE)
 ```
@@ -114,6 +121,10 @@ meanDiff
 ```{r}
 medianDiff
 ```
+
+The difference between the mean of the dataset with missing values and the dataset that was "data fixed" is **`r meanDiff`** steps.
+
+The difference between the mean of the dataset with missing values and the dataset that was "data fixed" is **`r medianDiff`** steps.
 
 ### Are there differences in activity patterns between weekdays and weekends?
 
